Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
---|---|---|---|---|---|---|
JDK-8174447 | 10 | Zoltan Majo | P2 | Resolved | Fixed | b01 |
Seen multiple times in PIT
# Internal Error (/opt/jprt/T/P1/173800.jesper/s/hotspot/src/cpu/x86/vm/frame_x86.cpp:379), pid=13702, tid=13744
# assert(nm->insts_contains(original_pc)) failed: original PC must be in CompiledMethod
#
# JRE version: Java(TM) SE Runtime Environment (9.0) (fastdebug build 9-internal+0-2017-01-13-173800.jesper.dev1780-hs)
# Java VM: Java HotSpot(TM) Server VM (fastdebug 9-internal+0-2017-01-13-173800.jesper.dev1780-hs, compiled mode, g1 gc, linux-x86)
# Core dump will be written. Default location: Core dumps may be processed with "/usr/libexec/abrt-hook-ccpp %s %c %p %u %g %t e" (or dumping to /export/home/aurora/sandbox/results/workDir/sanity/MismatchedWhiteBox/WhiteBox/core.13702)
#
# If you would like to submit a bug report, please visit:
# http://bugreport.java.com/bugreport/crash.jsp
#
--------------- S U M M A R Y ------------
Command Line: -Dtest.src=/export/home/aurora/CommonData/j2se_jdk/hotspot/test/sanity/MismatchedWhiteBox -Dtest.src.path=/export/home/aurora/CommonData/j2se_jdk/hotspot/test/sanity/MismatchedWhiteBox:/export/home/aurora/CommonData/j2se_jdk/test/lib -Dtest.classes=/export/home/aurora/sandbox/results/workDir/classes/2/sanity/MismatchedWhiteBox -Dtest.class.path=/export/home/aurora/sandbox/results/workDir/classes/2/sanity/MismatchedWhiteBox:/export/home/aurora/sandbox/results/workDir/classes/2/test/lib -Dtest.vm.opts= -Dtest.tool.vm.opts= -Dtest.compiler.opts= -Dtest.java.opts=-Xcomp -Xcomp -XX:MaxRAMFraction=8 -XX:+CreateCoredumpOnCrash -ea -esa -XX:CompileThreshold=100 -XX:+UnlockExperimentalVMOptions -server -XX:-TieredCompilation -XX:+IgnoreUnrecognizedVMOptions -XX:+DeoptimizeALot -Dtest.jdk=/export/home/aurora/CommonData/TEST_JAVA_HOME -Dcompile.jdk=/export/home/aurora/CommonData/TEST_JAVA_HOME -Dtest.timeout.factor=16.0 -Dtest.modules=java.base/jdk.internal.misc -Dtest.nativepath=/export/home/aurora/sandbox/JTREG_NATIVEPATH_LIBRARY_PREPARED --add-modules=java.base --add-exports=java.base/jdk.internal.misc=ALL-UNNAMED -Xcomp -Xcomp -XX:MaxRAMFraction=8 -XX:+CreateCoredumpOnCrash -ea -esa -XX:CompileThreshold=100 -XX:+UnlockExperimentalVMOptions -XX:-TieredCompilation -XX:+IgnoreUnrecognizedVMOptions -XX:+DeoptimizeALot -Djava.library.path=/export/home/aurora/sandbox/JTREG_NATIVEPATH_LIBRARY_PREPARED com.sun.javatest.regtest.agent.MainWrapper /export/home/aurora/sandbox/results/workDir/sanity/MismatchedWhiteBox/WhiteBox.d/main.2.jta sun.hotspot.WhiteBox
Host: scaaa644.us.oracle.com, Intel(R) Xeon(R) CPU E5-2690 0 @ 2.90GHz, 32 cores, 251G, Oracle Linux Server release 7.0
Time: Sat Jan 14 14:42:11 2017 PST elapsed time: 26 seconds (0d 0h 0m 26s)
--------------- T H R E A D ---------------
Current thread (0xcc16b400): VMThread "VM Thread" [stack: 0xcc234000,0xcc2b4000] [id=13744]
Stack: [0xcc234000,0xcc2b4000], sp=0xcc2b22f0, free space=504k
Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x1447767] VMError::report_and_die(int, char const*, char const*, char*, Thread*, unsigned char*, void*, void*, char const*, int, unsigned int)+0x137;; VMError::report_and_die(int, char const*, char const*, char*, Thread*, unsigned char*, void*, void*, char const*, int, unsigned int)+0x137
V [libjvm.so+0x1448460] VMError::report_and_die(Thread*, char const*, int, char const*, char const*, char*)+0x30;; VMError::report_and_die(Thread*, char const*, int, char const*, char const*, char*)+0x30
V [libjvm.so+0x922fc0] report_vm_error(char const*, int, char const*, char const*, ...)+0x60;; report_vm_error(char const*, int, char const*, char const*, ...)+0x60
V [libjvm.so+0xa77cba] frame::adjust_unextended_sp()+0xca;; frame::adjust_unextended_sp()+0xca
V [libjvm.so+0xa7874b] frame::sender_for_compiled_frame(RegisterMap*) const+0xcb;; frame::sender_for_compiled_frame(RegisterMap*) const+0xcb
V [libjvm.so+0xa78e0e] frame::sender(RegisterMap*) const+0x16e;; frame::sender(RegisterMap*) const+0x16e
V [libjvm.so+0xa6c7fb] frame::deoptimize(JavaThread*)+0x28b;; frame::deoptimize(JavaThread*)+0x28b
V [libjvm.so+0x94c8b3] Deoptimization::deoptimize_single_frame(JavaThread*, frame, Deoptimization::DeoptReason)+0x203;; Deoptimization::deoptimize_single_frame(JavaThread*, frame, Deoptimization::DeoptReason)+0x203
V [libjvm.so+0x94cacf] Deoptimization::deoptimize(JavaThread*, frame, RegisterMap*, Deoptimization::DeoptReason)+0xff;; Deoptimization::deoptimize(JavaThread*, frame, RegisterMap*, Deoptimization::DeoptReason)+0xff
V [libjvm.so+0x94cb76] Deoptimization::deoptimize(JavaThread*, frame, RegisterMap*)+0x26;; Deoptimization::deoptimize(JavaThread*, frame, RegisterMap*)+0x26
V [libjvm.so+0x13a3f47] JavaThread::deoptimize()+0xe7;; JavaThread::deoptimize()+0xe7
V [libjvm.so+0x1488e2b] VM_DeoptimizeAll::doit()+0x4b;; VM_DeoptimizeAll::doit()+0x4b
V [libjvm.so+0x148998a] VM_Operation::evaluate()+0x9a;; VM_Operation::evaluate()+0x9a
V [libjvm.so+0x1485b89] VMThread::evaluate_operation(VM_Operation*)+0x169;; VMThread::evaluate_operation(VM_Operation*)+0x169
V [libjvm.so+0x14866d0] VMThread::loop()+0x260;; VMThread::loop()+0x260
V [libjvm.so+0x1486dad] VMThread::run()+0xcd;; VMThread::run()+0xcd
V [libjvm.so+0x11208f4] thread_native_entry(Thread*)+0x124;; thread_native_entry(Thread*)+0x124
C [libpthread.so.0+0x6b2c] start_thread+0xcc
VM_Operation (0xf127d254): DeoptimizeAll, mode: safepoint, requested by thread 0xcaa4d000
# Internal Error (/opt/jprt/T/P1/173800.jesper/s/hotspot/src/cpu/x86/vm/frame_x86.cpp:379), pid=13702, tid=13744
# assert(nm->insts_contains(original_pc)) failed: original PC must be in CompiledMethod
#
# JRE version: Java(TM) SE Runtime Environment (9.0) (fastdebug build 9-internal+0-2017-01-13-173800.jesper.dev1780-hs)
# Java VM: Java HotSpot(TM) Server VM (fastdebug 9-internal+0-2017-01-13-173800.jesper.dev1780-hs, compiled mode, g1 gc, linux-x86)
# Core dump will be written. Default location: Core dumps may be processed with "/usr/libexec/abrt-hook-ccpp %s %c %p %u %g %t e" (or dumping to /export/home/aurora/sandbox/results/workDir/sanity/MismatchedWhiteBox/WhiteBox/core.13702)
#
# If you would like to submit a bug report, please visit:
# http://bugreport.java.com/bugreport/crash.jsp
#
--------------- S U M M A R Y ------------
Command Line: -Dtest.src=/export/home/aurora/CommonData/j2se_jdk/hotspot/test/sanity/MismatchedWhiteBox -Dtest.src.path=/export/home/aurora/CommonData/j2se_jdk/hotspot/test/sanity/MismatchedWhiteBox:/export/home/aurora/CommonData/j2se_jdk/test/lib -Dtest.classes=/export/home/aurora/sandbox/results/workDir/classes/2/sanity/MismatchedWhiteBox -Dtest.class.path=/export/home/aurora/sandbox/results/workDir/classes/2/sanity/MismatchedWhiteBox:/export/home/aurora/sandbox/results/workDir/classes/2/test/lib -Dtest.vm.opts= -Dtest.tool.vm.opts= -Dtest.compiler.opts= -Dtest.java.opts=-Xcomp -Xcomp -XX:MaxRAMFraction=8 -XX:+CreateCoredumpOnCrash -ea -esa -XX:CompileThreshold=100 -XX:+UnlockExperimentalVMOptions -server -XX:-TieredCompilation -XX:+IgnoreUnrecognizedVMOptions -XX:+DeoptimizeALot -Dtest.jdk=/export/home/aurora/CommonData/TEST_JAVA_HOME -Dcompile.jdk=/export/home/aurora/CommonData/TEST_JAVA_HOME -Dtest.timeout.factor=16.0 -Dtest.modules=java.base/jdk.internal.misc -Dtest.nativepath=/export/home/aurora/sandbox/JTREG_NATIVEPATH_LIBRARY_PREPARED --add-modules=java.base --add-exports=java.base/jdk.internal.misc=ALL-UNNAMED -Xcomp -Xcomp -XX:MaxRAMFraction=8 -XX:+CreateCoredumpOnCrash -ea -esa -XX:CompileThreshold=100 -XX:+UnlockExperimentalVMOptions -XX:-TieredCompilation -XX:+IgnoreUnrecognizedVMOptions -XX:+DeoptimizeALot -Djava.library.path=/export/home/aurora/sandbox/JTREG_NATIVEPATH_LIBRARY_PREPARED com.sun.javatest.regtest.agent.MainWrapper /export/home/aurora/sandbox/results/workDir/sanity/MismatchedWhiteBox/WhiteBox.d/main.2.jta sun.hotspot.WhiteBox
Host: scaaa644.us.oracle.com, Intel(R) Xeon(R) CPU E5-2690 0 @ 2.90GHz, 32 cores, 251G, Oracle Linux Server release 7.0
Time: Sat Jan 14 14:42:11 2017 PST elapsed time: 26 seconds (0d 0h 0m 26s)
--------------- T H R E A D ---------------
Current thread (0xcc16b400): VMThread "VM Thread" [stack: 0xcc234000,0xcc2b4000] [id=13744]
Stack: [0xcc234000,0xcc2b4000], sp=0xcc2b22f0, free space=504k
Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x1447767] VMError::report_and_die(int, char const*, char const*, char*, Thread*, unsigned char*, void*, void*, char const*, int, unsigned int)+0x137;; VMError::report_and_die(int, char const*, char const*, char*, Thread*, unsigned char*, void*, void*, char const*, int, unsigned int)+0x137
V [libjvm.so+0x1448460] VMError::report_and_die(Thread*, char const*, int, char const*, char const*, char*)+0x30;; VMError::report_and_die(Thread*, char const*, int, char const*, char const*, char*)+0x30
V [libjvm.so+0x922fc0] report_vm_error(char const*, int, char const*, char const*, ...)+0x60;; report_vm_error(char const*, int, char const*, char const*, ...)+0x60
V [libjvm.so+0xa77cba] frame::adjust_unextended_sp()+0xca;; frame::adjust_unextended_sp()+0xca
V [libjvm.so+0xa7874b] frame::sender_for_compiled_frame(RegisterMap*) const+0xcb;; frame::sender_for_compiled_frame(RegisterMap*) const+0xcb
V [libjvm.so+0xa78e0e] frame::sender(RegisterMap*) const+0x16e;; frame::sender(RegisterMap*) const+0x16e
V [libjvm.so+0xa6c7fb] frame::deoptimize(JavaThread*)+0x28b;; frame::deoptimize(JavaThread*)+0x28b
V [libjvm.so+0x94c8b3] Deoptimization::deoptimize_single_frame(JavaThread*, frame, Deoptimization::DeoptReason)+0x203;; Deoptimization::deoptimize_single_frame(JavaThread*, frame, Deoptimization::DeoptReason)+0x203
V [libjvm.so+0x94cacf] Deoptimization::deoptimize(JavaThread*, frame, RegisterMap*, Deoptimization::DeoptReason)+0xff;; Deoptimization::deoptimize(JavaThread*, frame, RegisterMap*, Deoptimization::DeoptReason)+0xff
V [libjvm.so+0x94cb76] Deoptimization::deoptimize(JavaThread*, frame, RegisterMap*)+0x26;; Deoptimization::deoptimize(JavaThread*, frame, RegisterMap*)+0x26
V [libjvm.so+0x13a3f47] JavaThread::deoptimize()+0xe7;; JavaThread::deoptimize()+0xe7
V [libjvm.so+0x1488e2b] VM_DeoptimizeAll::doit()+0x4b;; VM_DeoptimizeAll::doit()+0x4b
V [libjvm.so+0x148998a] VM_Operation::evaluate()+0x9a;; VM_Operation::evaluate()+0x9a
V [libjvm.so+0x1485b89] VMThread::evaluate_operation(VM_Operation*)+0x169;; VMThread::evaluate_operation(VM_Operation*)+0x169
V [libjvm.so+0x14866d0] VMThread::loop()+0x260;; VMThread::loop()+0x260
V [libjvm.so+0x1486dad] VMThread::run()+0xcd;; VMThread::run()+0xcd
V [libjvm.so+0x11208f4] thread_native_entry(Thread*)+0x124;; thread_native_entry(Thread*)+0x124
C [libpthread.so.0+0x6b2c] start_thread+0xcc
VM_Operation (0xf127d254): DeoptimizeAll, mode: safepoint, requested by thread 0xcaa4d000
- backported by
-
JDK-8174447 Assert fails in deoptimization due to original PC at the end of code section
-
- Resolved
-
- relates to
-
JDK-8173184 Emit padding instructions after non-returning calls
-
- Open
-
-
JDK-8285378 Remove unnecessary nop for C1 exception and deopt handler
-
- Resolved
-