8172844: Assert fails in deoptimization due to original PC at the end of code section

Change assert to accept end of code section as well.

Reviewed-by: rbackman, kvn, dlong